# gpu_compute_experiments

pyopencl/: 2d_yee_grid.ipynb  clpeak.ipynb  clpeak.py  compute_test.ipynb  kernel_latency_overhead.ipynb  requirements.txt  yee_grid_3d.ipynb  yee_grid_3d_double_buffer.ipynb  yee_grid_curl.ipynb  yee_grid_curl_simd.ipynb
rust_cl/: .gitignore  Cargo.toml
rust_cl/scripts/: install_packages.sh
rust_cl/src/: app.rs  chrome_trace.rs  constants.rs  gui.rs  lib.rs  main.rs  pool.rs  read_buffer_to_texture.wgsl  readback.rs  shader.cl  simulation.rs  window.rs
wgpu-py/: .gitignore  compute_chain_async.ipynb  compute_yee_grid.py  flop_test.ipynb  requirements.txt  yee_grid_brute_search.ipynb  yee_grid_curl.ipynb  yee_grid_curl_3d.ipynb
