[package]
name = "ytdlp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.97" }
clap = { version = "4.5.4", features = ["derive"] }
opencl3 = { version = "0.11.0" }
ndarray = { version = "0.16.1", features = ["serde"] }
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = { version = "1.0" }
ndarray-npy = { version = "0.9.1" }
threadpool = { version = "1.8.1" }
log = { version = "0.4.26" }
env_logger = { version = "0.10", features = ["auto-color", "humantime"] }
crossbeam-channel = { version = "0.5.14" }
prettytable-rs = { version = "0.10.0" }

bytemuck = { version = "1.18" }
egui = { version = "0.31.1", features = ["bytemuck"] }
pollster = { version = "0.3.0" }
wgpu = { version = "24.0.0" }
winit = { version = "0.30.7" }
egui-winit = { version = "0.31.1" }
egui-wgpu = { version = "0.31.1", features = ["winit"] }

# dashmap = { version = "6.0.1" }
# derive_more = { version = "0.99.18" }
# env_logger = { version = "0.11.3" }
# lazy_static = { version = "1.5.0" }
# log = { version = "0.4.22" }
# num = { version = "0.4" }
# num-derive = { version = "0.4" }
# num-traits = { version = "0.2" }
# r2d2 = { version = "0.8.10" }
# r2d2_sqlite = { version = "0.24" }
# regex = { version = "1.10.5" }
# reqwest = { version = "0.12.5" }
# rusqlite = { version = "0.31", features = ["bundled"] }
# thiserror = { version = "1.0.63" }
# threadpool = { version = "1.8.1" }
